Fixes #4328 - Display of date picker overlay is cut off.

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -11397,7 +11397,7 @@ output {
 
   th {
     background: none;
-    font-weight: bold;
+    font-weight: 500;
   }
 
   th,
@@ -11427,14 +11427,29 @@ output {
   .dow {
     text-transform: uppercase;
     font-size: 12px;
-    padding: 5px 5px 0;
+    padding: 0;
     text-align: center;
     vertical-align: inherit;
   }
 
-  .day {
+  td.cw {
+    // background: 1px gap on the right towards the days + 1px border
+    background: linear-gradient(
+      to right,
+      var(--background-modifier-lighter),
+      var(--background-modifier-lighter) calc(100% - 2px),
+      transparent calc(100% - 2px),
+      var(--background-modifier-accent) calc(100% - 1px),
+      transparent calc(100% - 1px)
+    );
+    padding: 0 5px 0 3px !important;
+    text-align: center;
+    border-radius: 0;
+  }
+
+  tbody td {
     width: 27px;
-    height: 26px;
+    height: 27px;
     border-radius: 14px;
     padding: 1px 0 0 !important;
     background-color: inherit;
@@ -11453,7 +11468,6 @@ output {
   .month,
   .year {
     text-align: center;
-    font-size: 15px;
 
     &:not(.disabled) {
       @extend %clickable;
